Fix title rem bullet container visibility

--- a/src/scss/snippet.scss
+++ b/src/scss/snippet.scss
@@ -275,21 +275,23 @@ $LocalLeft: (
                     background-size: 100% 100%;
                     border-top-left-radius: 4px;
                     border-top-right-radius: 4px;
-                    overflow: hidden;
                     .rem-button__container {
                         z-index: 1;
                     }
                     &:focus-within {
-                        .rn-editor__rem__body__text:not(.rn-editor__rem__body__text--h1):not(.rn-editor__rem__body__text--h2):not(.rn-editor__rem__body__text--h3) {
-                            &::after {
-                                font-family: monospace;
-                                content:"...╷.╽╷..╷╽.╷..╽..╷.╽╷..╷╽.╷..╽";
-                                letter-spacing: 1.275rem;
-                                position: absolute;
-                                overflow-x: hidden;
-                                white-space: pre;
-                                left: -0.3rem;
-                                top: 0.9rem;
+                        > .rem {
+                            overflow: hidden;
+                            .rn-editor__rem__body__text:not(.rn-editor__rem__body__text--h1):not(.rn-editor__rem__body__text--h2):not(.rn-editor__rem__body__text--h3) {
+                                &::after {
+                                    font-family: monospace;
+                                    content:"...╷.╽╷..╷╽.╷..╽..╷.╽╷..╷╽.╷..╽";
+                                    letter-spacing: 1.275rem;
+                                    position: absolute;
+                                    overflow-x: hidden;
+                                    white-space: pre;
+                                    left: -0.3rem;
+                                    top: 0.9rem;
+                                }
                             }
                         }
                     }
